Fixed `FixedPopupPanels` and `FlexiblePopupPanels` high contrast

--- a/styles/colors-highcontrast.scss
+++ b/styles/colors-highcontrast.scss
@@ -50,6 +50,10 @@
 	// ---------------------------------------
 	--sand-popup-bg-color-rgb: 0, 0, 0;
 
+	// FixedPopupPanles
+	// ---------------------------------------
+	--sand-flexible-popup-panles-bg-color-rgb: 0, 0, 0;
+
 	// PopupTabLayout
 	// ---------------------------------------
 	--sand-popup-scrimtransparent-bg-color: var(--sand-overlay-bg-color-rgb-base);
