--- a/styles/colors-light.scss
+++ b/styles/colors-light.scss
@@ -30,6 +30,10 @@
 	// Overlay Alert
 	// --------------------------------------
 
+	// FixedPopupPanles
+	// ---------------------------------------
+	--sand-flexible-popup-panles-bg-color-rgb: 187, 187, 187, 90%;
+
 	// common colors
 	--sand-alert-overlay-bg-color-rgb: 0, 0, 0;
 	--sand-alert-overlay-text-color-rgb: rgb(230, 230, 230);
