--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -271,13 +271,13 @@ $sand-popup-scrimtransparent-bg-color: rgba($sand-popup-bg-color-rgb-base, 95%);
 
 // FixedPopupPanels
 // ---------------------------------------
-$sand-fixedpopuppanels-bg-color: $sand-popup-bg-color;
+$sand-fixedpopuppanels-bg-color: rgba(var(--sand-flexible-popup-panles-bg-color-rgb, (87, 94, 102, 90%)));
 $sand-fixedpopuppanels-scrimtransparent-bg-color: $sand-popup-scrimtransparent-bg-color;
 $sand-fixedpopuppanels-shadow: 0 36px 36px $sand-shadow-color;
 
 // FlexiblePopupPanels
 // ---------------------------------------
-$sand-flexiblepopuppanels-panel-bg-color: $sand-popup-bg-color;
+$sand-flexiblepopuppanels-panel-bg-color: $sand-fixedpopuppanels-bg-color;
 $sand-flexiblepopuppanels-panel-scrimtransparent-bg-color: $sand-popup-scrimtransparent-bg-color;
 $sand-flexiblepopuppanels-panel-shadow: 0 36px 36px $sand-shadow-color;
 
